[package]
name = "redox"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
log = "0.4.25"
log4rs = "1.3.0"
lru = "0.12.5"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"
mlua = { version = "0.10.2", features = ["luau", "send", "async", "serialize"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = "1.43.0"
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
futures = "0.3.31"
mime = "0.3.17"
sysinfo = "0.33.1"
serde_with = "3.12.0"

[features]
distro-web = ["sqlite", "json"]
sqlite = []
json = []
logger = []
lru_cache = []
requests = []
uuid = []
